--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 faker = "14.2.0"
 flask = "2.2.2"
-flask-marshmallow = "0.14.0"
+flask-marshmallow = "*"
 flask-migrate = "3.1.0"
 flask-restful = "0.3.9"
 flask-sqlalchemy = "3.0.3"
@@ -15,7 +15,7 @@ importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
 marshmallow = "3.18.0"
-marshmallow-sqlalchemy = "0.28.1"
+marshmallow-sqlalchemy = "*"
 
 [requires]
 python_full_version = "3.8.13"
